--- a/Alpha/AlphaMvc/Content/editable/tablestyle.css
+++ b/Alpha/AlphaMvc/Content/editable/tablestyle.css
@@ -113,17 +113,26 @@
             margin: 0;
             background: #fff;
             height: 25px;
+            text-align: left;
+        }
+        table td .txt-3 {
+            margin: 0;
+            background: #fff;
+            height: 25px;
+            text-align: right;
         }
         table td .txt-2 {
             margin: 0;
             background: #fff;
             height: 25px;
+            text-align: left;
         }
         table td .txtdiscount {
-            width: 167px;
+            width: 168px;
             margin: 0;
             background: #fff;
             height: 25px;
+            text-align: right;
         }
     .txtbox{
         margin: 0;
@@ -140,22 +149,25 @@
         border: none;
     }
     .txtdisable {
-        /*width: 50px;*/
+        width: 170px;
         margin: 0;
         /*background: #f0ebd8;*/
-        background: #f0ede3;
+        background: #ebe7d8;
         height: 29px;
-        border: none;
+        border: 1px solid #d7d1bc;
         text-align: right;
     }
     .txtdisable-2 {
-        /*width: 50px;*/
+        width: 165px;
         margin: 0;
         background: #fafafa;
         height: 29px;
         border: none;
         text-align: right;
+        border-left: 1px solid #acc;
+        border-right: 1px solid #acc;
         border-bottom: 1px solid #acc;
+        padding-right: 5px;
     }
     .myDIV {
         width:inherit;
@@ -193,12 +205,16 @@
     width: 80px;
     padding: 2px !important;
 }
+    .clone-1{
+        padding-left: 3px;
+        padding-right: 3px;
+    }
     table td .select-2 {
         /*background: #fff;
                 height: 18px;
                 width: 90px;*/
         background: #fff;
-        height: 25px;
+        height: 29px;
         width: 120px;
         padding: 2px !important;
     }
@@ -214,7 +230,7 @@
     }
     table td .selday {
         background: #fff;
-        height: 25px;
+        height: 29px;
         width: 50px;
         padding: 2px !important;
     }
@@ -230,18 +246,21 @@
             background: #fff;
             height: 25px;
             width: 50px;
+            text-align: center;
         }
     table td .input-2 {
             margin: 0;
             background: #fff;
             height: 25px;
             width: 110px;
+            text-align: center;
         }
     table td .input-3 {
             margin: 0;
             background: #fff;
             height: 25px;
-            width: 70px;
+            width: 100px;
+            text-align: center;
         }
     table td .txtUniPrice {
             margin: 0;
@@ -271,6 +290,7 @@
        border-bottom: 1px solid #d7d1bc;
        background: #f4eed6;
        padding-right: 20px;
+       font-weight: 700;
     }
 
     #input-1__c
@@ -466,8 +486,10 @@ select{
     width: 25%;
 }
 .form-style .field-select-small-3 {
-    background-color: #f0ede3;
+    /*background-color: #f0ede3;
     border: none !important;
+    width: 35%;*/
+    background-color: #f0ede3;
     width: 35%;
 }
 .form-style .field-select-big {
