--- a/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/CreateJobOrder.cshtml
@@ -198,7 +198,7 @@
                                                             </td>
 
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
                                                             </td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
@@ -228,8 +228,8 @@
                                                                 <input type="text" id="Amount" disabled class="Amount txtdisable-2">
                                                             </td>
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                            </td>
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
@@ -237,7 +237,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <a id="add-row6" href="#" onclick="AddRowIncome()">+ Add Row</a>
+                                            <button id="add-row6" onclick="AddRowIncome()" class="btn btn-primary">Add Row</button>
                                             
                                                 <table class="tableexpense">
                                                     <tr>
@@ -307,8 +307,8 @@
                                                             </td>
 
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                            </td>
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
@@ -347,8 +347,8 @@
                                                                 <input type="text" id="Time" name="Amount" class="txtdisable-2">
                                                             </td>
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                            </td>
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
@@ -356,7 +356,7 @@
                                                     </tbody>
                                                 </table>
                                                 </div>
-                                                <a id="add-row7" href="#">+ Add Row</a>
+                                            <button id="add-row7" class="btn btn-primary">Add Row</button>
                                             @*<div class="myDIV">*@
                                                 <table class="tableexpense">
                                                     <tr>
@@ -479,8 +479,8 @@
                                                                 <input id="Special" type="text" value="" class="input-2" />
                                                             </td>
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                            </td>
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
@@ -546,8 +546,8 @@
                                                                 <input id="Special" type="text" value="" class="input-2" />
                                                             </td>
                                                             <td>
-                                                                <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                            </td>
+                                                                <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                             <td>
                                                                 <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                             </td>
@@ -555,7 +555,7 @@
                                                     </tbody>
                                                 </table>
                                             </div>
-                                            <a id="add-row2" href="#">+ Add Row</a>
+                                            <button id="add-row2" class="btn btn-primary">Add Row</button><br /><br />
                                             <table>
                                                 <tr>
                                                     <td>
@@ -597,11 +597,11 @@
                                                             <input type="text" id="SoNo" class="txt-1">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-1">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
-                                                            <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                        </td>
+                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
@@ -617,18 +617,18 @@
                                                             <input type="text" id="SoNo"  class="txt-1">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-1">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
-                                                            <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                        </td>
+                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row3" href="#">+ Add Row</a>
+                                            <button id="add-row3" class="btn btn-primary">Add Row</button>
                                         </div>
                                         <p></p>
 
@@ -662,11 +662,11 @@
                                                             <input type="text" id="InvNo" class="txt-2">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-2">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
-                                                            <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                        </td>
+                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
@@ -685,18 +685,18 @@
                                                             <input type="text" id="InvNo" class="txt-2">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-2">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
-                                                            <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
-                                                        </td>
+                                                            <div class="clone-1"><img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" /></div>
+</td>
                                                         <td>
                                                             <img class="row-remover" src="@Url.Content("~/images/remove.png")" alt="Remove Row" />
                                                         </td>
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row4" href="#">+ Add Row</a>
+                                            <button id="add-row4" class="btn btn-primary">Add Row</button>
                                         </div>
                                         <p></p>
 
@@ -730,7 +730,7 @@
                                                             <input type="text" id="InvNo" class="txt-2">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-2">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
                                                             <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -753,7 +753,7 @@
                                                             <input type="text" id="InvNo" class="txt-2">
                                                         </td>
                                                         <td>
-                                                            <input type="text" id="Amount" class="txt-2">
+                                                            <input type="text" id="Amount" class="txt-3">
                                                         </td>
                                                         <td>
                                                             <img class="row-cloner" src="@Url.Content("~/images/clone.png")" alt="Clone Row" />
@@ -764,7 +764,7 @@
                                                     </tr>
                                                 </tbody>
                                             </table>
-                                            <a id="add-row5" href="#">+ Add Row</a>
+                                            <button id="add-row5" class="btn btn-primary">Add Row</button>
                                         </div>
                                         <p></p>
 
