--- a/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
+++ b/Alpha/AlphaMvc/Views/JobOrder/IndexJobOrder.cshtml
@@ -7,7 +7,7 @@
 <table class="barattach-2">
     <tr>
         <td>
-            @*<div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>*@
+            <div class="topicattach-2">Search : <input id="searchInput" placeholder="Type To Filter"><br /></div>
             <a href="/JobOrder/CreateJobOrder"><img src="@Url.Content("~/images/btnAdd.png")" alt="IMAGES" class="imgadd" /></a>
         </td>
     </tr>
@@ -27,135 +27,114 @@
                 <th></th>
             </tr>
         </thead>
-        <tbody>
-            <tr>
-                <td>1</td>
-                <td>Order1</td>
-                <td>17/12/2017</td>
-                <td>บริษัท1</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ1</td>
-                <td class="hideANDseek">ผู้ประสานงาน1</td>
-                <td class="hideANDseek">หมายเหตุ1</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>2</td>
-                <td>Order2</td>
-                <td>17/12/2017</td>
-                <td>บริษัท2</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ2</td>
-                <td class="hideANDseek">ผู้ประสานงาน2</td>
-                <td class="hideANDseek">หมายเหตุ2</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>3</td>
-                <td>Order3</td>
-                <td>17/12/2017</td>
-                <td>บริษัท3</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ3</td>
-                <td class="hideANDseek">ผู้ประสานงาน3</td>
-                <td class="hideANDseek">หมายเหตุ3</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>4</td>
-                <td>Order4</td>
-                <td>17/12/2017</td>
-                <td>บริษัท4</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ4</td>
-                <td class="hideANDseek">ผู้ประสานงาน4</td>
-                <td class="hideANDseek">หมายเหตุ4</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>5</td>
-                <td>Order5</td>
-                <td>17/12/2017</td>
-                <td>บริษัท5</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ5</td>
-                <td class="hideANDseek">ผู้ประสานงาน5</td>
-                <td class="hideANDseek">หมายเหตุ5</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>6</td>
-                <td>Order6</td>
-                <td>17/12/2017</td>
-                <td>บริษัท6</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ6</td>
-                <td class="hideANDseek">ผู้ประสานงาน6</td>
-                <td class="hideANDseek">หมายเหตุ6</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
-            <tr>
-                <td>7</td>
-                <td>Order7</td>
-                <td>17/12/2017</td>
-                <td>บริษัท7</td>
-                <td>098xxxxxxx</td>
-                <td class="hideANDseek">บุคคลติดต่อ7</td>
-                <td class="hideANDseek">ผู้ประสานงาน7</td>
-                <td class="hideANDseek">หมายเหตุ7</td>
-                <td>
-                    <a href="@Url.Action("EditJobOrder", "JobOrder")">
-                        <img src="@Url.Content("~/Images/edit.png")" />
-                    </a>
-                    <a href="@Url.Action("Delete", "Trachnician")">
-                        <img src="@Url.Content("~/Images/delete.png")" />
-                    </a>
-                </td>
-            </tr>
+        <tbody id="result">
         </tbody>
     </table>
 </div>
 
 @* ------------------------------- grid  -------------------------------*@
+<script>
+        $(document).ready(function () {
+
+
+            //$('#tableData').paging({ limit: 5 });
+
+
+            //------------------------- Paging -------------------------
+
+            //------------------------- Sorting ------------------------
+            $('th').click(function () {
+                var table = $(this).parents('table').eq(0)
+                var rows = table.find('tr:gt(0)').toArray().sort(comparer($(this).index()))
+                this.asc = !this.asc
+                if (!this.asc) { rows = rows.reverse() }
+                for (var i = 0; i < rows.length; i++) { table.append(rows[i]) }
+            })
+            function comparer(index) {
+                return function (a, b) {
+                    var valA = getCellValue(a, index), valB = getCellValue(b, index)
+                    return $.isNumeric(valA) && $.isNumeric(valB) ? valA - valB : valA.localeCompare(valB)
+                }
+            }
+            function getCellValue(row, index) { return $(row).children('td').eq(index).html() }
+            //------------------------- Sorting ------------------------
+            //-------------------------filter------------------------
+            $("#searchInput").keyup(function () {
+                //hide all the rows
+                $("#result").find("tr").hide();
+
+                //split the current value of searchInput
+                var data = this.value.split(" ");
+                //create a jquery object of the rows
+                var jo = $("#result").find("tr");
+
+                //Recusively filter the jquery object to get results.
+                $.each(data, function (i, v) {
+                    jo = jo.filter("*:contains('" + v + "')");
+                });
+                //show the rows that match.
+                jo.show();
+                //Removes the placeholder text
+
+            }).focus(function () {
+                this.value = "";
+                $(this).css({ "color": "black" });
+                $(this).unbind('focus');
+            }).css({ "color": "#C0C0C0" });
+            //-------------------------filter------------------------
+
+            $.ajax(
+            {
+                url: 'http://localhost:13131/api/JobOrder',
+                type: 'GET',
+                datatype: 'json',
+                success: function (data) {
+                    data = JSON.parse(data);
+                    console.log(data);
+                    var html = '<tbody>';
+                    for (var i = 0; i < data.Table.length; i++) {
+                        html += '<tr>';
+                        html += '<td>' + data.Table[i].RowNum + '</td>';
+                        html += '<td class="hidecolumn">' + data.Table[i].ID + '</td>';
+                        html += '<td>' + data.Table[i].JobNo + '</td>';
+                        html += '<td>' + data.Table[i].JobDate + '</td>';
+                        html += '<td>' + data.Table[i].Customer + '</td>';
+                        html += '<td>' + data.Table[i].Tel + '</td>';
+                        html += '<td class="hideANDseek">' + data.Table[i].Contact + '</td>';
+                        html += '<td class="hideANDseek">' + data.Table[i].Coordinate + '</td>';
+                        html += '<td class="hideANDseek">' + data.Table[i].Remark + '</td>';
+                        html += '<td>';
+                        html += '<a href="/JobOrder/EditJobOrder?id=' + data.Table[i].ID + '" id="edit' + data.Table[i].ID + '">' + '<img src="@Url.Content("~/Images/edit.png")"/></a>';
+                        html += '<a href="#" id="del' + data.Table[i].ID + '" onclick = " RowDelete(' + data.Table[i].ID + ') " >' + '<img src="@Url.Content("~/Images/delete.png")" /></a>';
+                        html += '</td>';
+                        html += '</tr>';
+                    }
+                    html += '</tbody>';
+                    document.getElementById("result").innerHTML = html;
+                },
+                error: function (result) {
+                    alert(result)
+                }
+            });
+        });
+        function RowDelete(id) {
+            var dataObject = { ID: id };
+            $.ajax(
+                {
+                    url: 'http://localhost:13131/api/JobOrder',
+                    type: 'DELETE',
+                    data: dataObject,
+                    datatype: 'json',
+
+                    success: function (result) {
+                        alert('Delete is completed')
+                        window.location.href = "../JobOrder/IndexJobOrder";
+                    }
+                    ,
+                    error: function (msg) {
+                        alert(msg)
+                    }
+
+                });
+        }
+</script>
